@@ -1,3 +1,8 @@
+Thu Apr  7 11:10:38 CEST 2005 Daniel Veillard <veillard@redhat.com>
+
+	* server/gam_inotify.c: applied patch gamin_inotify_recursive2 from
+	  Andrei Lahun provided on bug #171201
+
 Tue Apr  5 16:48:31 CEST 2005 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_poll.c: found a problem when demonitoring a directory
